the last  commit

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     
     <div id="top">
-        <span id="Logo">Logo</span>
-        <span id="Home">Home</span>
-        <span id="About">About us</span>
-        <span id="Service">Service</span>
-        <span id="Picture">Picture</span>
-        <span id="Biog">Biog</span>
+        
+        <a id="Logo" href="">Logo</a>
+        <a id="Home" href="">Home</a>
+        <a id="About" href="">About us</a>
+        <a id="Service" href="">Service</a>
+        <a id="Picture" href="">Picture</a>
+        <a id="Biog" href="">Biog</a>
         <button class="sign-in"> sign in</button>
         <button class="log-in"> log in</button>
     </div>
